Fix date picker shown behind dialog (#3476)

--- a/packages/lab/src/date-picker/DatePickerPanel.css
+++ b/packages/lab/src/date-picker/DatePickerPanel.css
@@ -4,7 +4,7 @@
   overflow: hidden;
   overflow-y: auto;
   position: relative;
-  z-index: var(--salt-zIndex-popout);
+  z-index: var(--salt-zIndex-flyover);
   box-shadow: var(--salt-overlayable-shadow-popout);
   box-sizing: border-box;
   display: flex;
